@@ -23,14 +23,14 @@
     <td align="center" valign="top">Yes</td>
   </tr>
   <tr>
-    <td valign="top">file</td>
+    <td valign="top">tofile</td>
     <td valign="top">the destination file.</td>
     <td align="center" valign="top">Yes</td>
   </tr>
 </table>
 <h3>Examples</h3>
 <blockquote>
-  <p><code>&lt;gzip src=&quot;test.tar&quot; file=&quot;test.tar.gz&quot;
+  <p><code>&lt;gzip src=&quot;test.tar&quot; tofile=&quot;test.tar.gz&quot;
   /&gt;</code></p>
 </blockquote>
 <hr>
